--- a/jzdc-services/index.html
+++ b/jzdc-services/index.html
@@ -11,8 +11,8 @@
 <div class="index-1-wrap">
     <div class="index-header clearfix">
         <i class="index-logo"></i>
+        <i class="close"></i>
     </div>
-    <div class="index-text"></div>
     <div class="index-menu">
         <div class="menu-row clearfix">
             <div class="menu-item-left icon icon1">
@@ -39,8 +39,6 @@
             </div>
         </div>
     </div>
-    <!--背景-->
-    <img src="images/index-wrap.jpg" width="100%" height="100%" class="index-wrap-bg" alt="">
 </div>
 </body>
 </html>
