--- a/jzdc-services/index.html
+++ b/jzdc-services/index.html
@@ -11,7 +11,7 @@
 <div class="index-1-wrap">
     <div class="index-header clearfix">
         <i class="index-logo"></i>
-        <i class="close"></i>
+        <i class="close" onclick="window.location.href='http://h5.jizhongdiancai.com'"></i>
     </div>
     <div class="index-menu">
         <div class="menu-row clearfix">
