集众服务样式调整

--- a/jzdc-services/index.html
+++ b/jzdc-services/index.html
@@ -41,4 +41,9 @@
     </div>
 </div>
 </body>
+<script>
+document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+    WeixinJSBridge.call('hideOptionMenu');
+});
+</script>
 </html>
