--- a/jzdc-services/as.html
+++ b/jzdc-services/as.html
@@ -39,26 +39,28 @@
                 <div class="as-header">
                     <i class="back" onclick="prev()"></i>
                 </div>
-                <div class="step3">
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #a47f7f;">
-                            称呼：
+                <div class="pass-form">
+                    <div class="step3">
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #a47f7f;">
+                                称呼：
+                            </div>
+                            <input class="pass-text-input" id="name" style="color: #a47f7f;"/>
                         </div>
-                        <input class="pass-text-input" id="name" style="color: #a47f7f;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #a47f7f;">
-                            手机号：
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #a47f7f;">
+                                手机号：
+                            </div>
+                            <input class="pass-text-input" id="phone" type="tel" style="color: #a47f7f;"/>
                         </div>
-                        <input class="pass-text-input" id="phone" style="color: #a47f7f;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
-                        <div class="pass-radio right" onclick="selectSex('女')">女士</div>
-                    </div>
-                    <div class="item clearfix">
-                        <input type="button" class="pass-button" style="background-color: #a47f7f;" value="提交"
-                               onclick="submit()"/>
+                        <div class="item clearfix">
+                            <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
+                            <div class="pass-radio right" onclick="selectSex('女')">女士</div>
+                        </div>
+                        <div class="item clearfix">
+                            <input type="button" class="pass-button" style="background-color: #a47f7f;" value="提交"
+                                   onclick="submit()"/>
+                        </div>
                     </div>
                 </div>
             </div>
