--- a/jzdc-services/auto.html
+++ b/jzdc-services/auto.html
@@ -39,25 +39,27 @@
                 <div class="auto-header">
                     <i class="back" onclick="prev()"></i>
                 </div>
-                <div class="step3">
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #00b0f0;">
-                            称呼：
+                <div class="pass-form">
+                    <div class="step3">
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #00b0f0;">
+                                称呼：
+                            </div>
+                            <input class="pass-text-input" id="name" style="color: #00b0f0;"/>
                         </div>
-                        <input class="pass-text-input" id="name" style="color: #00b0f0;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #00b0f0;">
-                            手机号：
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #00b0f0;">
+                                手机号：
+                            </div>
+                            <input class="pass-text-input" id="phone" style="color: #00b0f0;"/>
                         </div>
-                        <input class="pass-text-input" id="phone" style="color: #00b0f0;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
-                        <div class="pass-radio right" onclick="selectSex('女')">女士</div>
-                    </div>
-                    <div class="item clearfix">
-                        <input type="button" class="pass-button" style="background-color: #00b0f0;" onclick="submit()" value="提交"/>
+                        <div class="item clearfix">
+                            <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
+                            <div class="pass-radio right" onclick="selectSex('女')">女士</div>
+                        </div>
+                        <div class="item clearfix">
+                            <input type="button" class="pass-button" style="background-color: #00b0f0;" onclick="submit()" value="提交"/>
+                        </div>
                     </div>
                 </div>
             </div>
