--- a/jzdc-services/finance.html
+++ b/jzdc-services/finance.html
@@ -55,26 +55,28 @@
                 <div class="finance-header">
                     <i class="back" onclick="prev()"></i>
                 </div>
-                <div class="step5">
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #f9c30b;">
-                            称呼：
+                <div class="pass-form">
+                    <div class="step5">
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #f9c30b;">
+                                称呼：
+                            </div>
+                            <input class="pass-text-input" id="name" style="color: #f9c30b;"/>
                         </div>
-                        <input class="pass-text-input" id="name" style="color: #f9c30b;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #f9c30b;">
-                            手机号：
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #f9c30b;">
+                                手机号：
+                            </div>
+                            <input class="pass-text-input" id="phone" style="color: #f9c30b;"/>
                         </div>
-                        <input class="pass-text-input" id="phone" style="color: #f9c30b;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
-                        <div class="pass-radio right" onclick="selectSex('女')">女士</div>
-                    </div>
-                    <div class="item clearfix">
-                        <input type="button" onclick="submit()" class="pass-button" style="background-color: #f9c30b;"
-                               value="提交"/>
+                        <div class="item clearfix">
+                            <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
+                            <div class="pass-radio right" onclick="selectSex('女')">女士</div>
+                        </div>
+                        <div class="item clearfix">
+                            <input type="button" onclick="submit()" class="pass-button" style="background-color: #f9c30b;"
+                                   value="提交"/>
+                        </div>
                     </div>
                 </div>
             </div>
