--- a/jzdc-services/insur.html
+++ b/jzdc-services/insur.html
@@ -73,28 +73,30 @@
                     <div class="insur-header">
                         <i class="back" onclick="prev()"></i>
                     </div>
-                    <div class="step4">
-                        <div class="item clearfix">
-                            <div for="" class="label" style="color: #0eda85;">
-                                称呼：
+                    <div class="pass-form">
+                        <div class="step4">
+                            <div class="item clearfix">
+                                <div for="" class="label" style="color: #0eda85;">
+                                    称呼：
+                                </div>
+                                <input class="pass-text-input" id="name" style="color: #0eda85;"/>
                             </div>
-                            <input class="pass-text-input" id="name" style="color: #0eda85;"/>
-                        </div>
-                        <div class="item clearfix">
-                            <div for="" class="label" style="color: #0eda85;">
-                                手机号：
+                            <div class="item clearfix">
+                                <div for="" class="label" style="color: #0eda85;">
+                                    手机号：
+                                </div>
+                                <input class="pass-text-input" id="phone" style="color: #0eda85;"/>
                             </div>
-                            <input class="pass-text-input" id="phone" style="color: #0eda85;"/>
-                        </div>
-                        <div class="item clearfix">
-                            <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
-                            <div class="pass-radio right" onclick="selectSex('女')">女士</div>
-                        </div>
-                        <div class="item clearfix">
-                            <input type="button" class="pass-button" style="background-color: #0eda85;" onclick="submit()" value="提交"/>
+                            <div class="item clearfix">
+                                <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
+                                <div class="pass-radio right" onclick="selectSex('女')">女士</div>
+                            </div>
+                            <div class="item clearfix">
+                                <input type="button" class="pass-button" style="background-color: #0eda85;" onclick="submit()" value="提交"/>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    </div>
             </div>
 
             <div id="result-page" style="display: none;">
