--- a/jzdc-services/law.html
+++ b/jzdc-services/law.html
@@ -47,25 +47,27 @@
                 <div class="law-header">
                     <i class="back" onclick="prev()"></i>
                 </div>
-                <div class="step4">
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #0081ff;">
-                            称呼：
+                <div class="pass-form">
+                    <div class="step4">
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #0081ff;">
+                                称呼：
+                            </div>
+                            <input class="pass-text-input" id="name" style="color: #0081ff;"/>
                         </div>
-                        <input class="pass-text-input" id="name" style="color: #0081ff;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div for="" class="label" style="color: #0081ff;">
-                            手机号：
+                        <div class="item clearfix">
+                            <div for="" class="label" style="color: #0081ff;">
+                                手机号：
+                            </div>
+                            <input class="pass-text-input" id="phone" style="color: #0081ff;"/>
                         </div>
-                        <input class="pass-text-input" id="phone" style="color: #0081ff;"/>
-                    </div>
-                    <div class="item clearfix">
-                        <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
-                        <div class="pass-radio right" onclick="selectSex('女')">女士</div>
-                    </div>
-                    <div class="item clearfix">
-                        <input type="button" class="pass-button" style="background-color: #0081ff;" onclick="submit()" value="提交"/>
+                        <div class="item clearfix">
+                            <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
+                            <div class="pass-radio right" onclick="selectSex('女')">女士</div>
+                        </div>
+                        <div class="item clearfix">
+                            <input type="button" class="pass-button" style="background-color: #0081ff;" onclick="submit()" value="提交"/>
+                        </div>
                     </div>
                 </div>
             </div>
