--- a/jzdc-services/finance.html
+++ b/jzdc-services/finance.html
@@ -87,14 +87,16 @@
                 <div class="finance-header">
                     <i class="back" onclick="prev()"></i>
                 </div>
-                <div class="step5">
-                    <div class="result-content">
-                        <div>感谢，<span id="result-name"></span></div>
-                        <div>您的服务预约已提交成功</div>
-                        <div>稍后将有工作人员与您联系</div>
-                    </div>
-                    <div class="item clearfix">
-                        <input type="button" onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #f9c30b;" value="返回首页"/>
+                <div class="pass-form">
+                    <div class="step5">
+                        <div class="result-content">
+                            <div>感谢，<span id="result-name"></span></div>
+                            <div>您的服务预约已提交成功</div>
+                            <div>稍后将有工作人员与您联系</div>
+                        </div>
+                        <div class="item clearfix">
+                            <input type="button" onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #f9c30b;" value="返回首页"/>
+                        </div>
                     </div>
                 </div>
             </div>
