--- a/jzdc-services/finance.html
+++ b/jzdc-services/finance.html
@@ -67,15 +67,14 @@
                             <div for="" class="label" style="color: #f9c30b;">
                                 手机号：
                             </div>
-                            <input class="pass-text-input" id="phone" style="color: #f9c30b;"/>
+                            <input class="pass-text-input" id="phone" type="tel" style="color: #f9c30b;"/>
                         </div>
                         <div class="item clearfix">
                             <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
                             <div class="pass-radio right" onclick="selectSex('女')">女士</div>
                         </div>
                         <div class="item clearfix">
-                            <input type="button" onclick="submit()" class="pass-button" style="background-color: #f9c30b;"
-                                   value="提交"/>
+                            <div onclick="submit()" class="pass-button" style="background-color: #f9c30b;">提交</div>
                         </div>
                     </div>
                 </div>
@@ -95,7 +94,7 @@
                             <div>稍后将有工作人员与您联系</div>
                         </div>
                         <div class="item clearfix">
-                            <input type="button" onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #f9c30b;" value="返回首页"/>
+                            <div onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #f9c30b;">返回首页</div>
                         </div>
                     </div>
                 </div>
