--- a/jzdc-services/law.html
+++ b/jzdc-services/law.html
@@ -59,14 +59,14 @@
                             <div for="" class="label" style="color: #0081ff;">
                                 手机号：
                             </div>
-                            <input class="pass-text-input" id="phone" style="color: #0081ff;"/>
+                            <input class="pass-text-input" id="phone" type="tel" style="color: #0081ff;"/>
                         </div>
                         <div class="item clearfix">
                             <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
                             <div class="pass-radio right" onclick="selectSex('女')">女士</div>
                         </div>
                         <div class="item clearfix">
-                            <input type="button" class="pass-button" style="background-color: #0081ff;" onclick="submit()" value="提交"/>
+                            <div class="pass-button" style="background-color: #0081ff;" onclick="submit()">提交</div>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                             <div>稍后将有工作人员与您联系</div>
                         </div>
                         <div class="item clearfix">
-                            <input type="button" onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #0081ff;" value="返回首页"/>
+                            <div onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #0081ff;">返回首页</div>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
   });
 
   var sex = '男';
-  var type = '3';
+  var type = '2';
 
   function prev() {
       if(mySwiper.myIndex ===0){
