--- a/jzdc-services/property.html
+++ b/jzdc-services/property.html
@@ -59,14 +59,14 @@
                             <div for="" class="label" style="color: #ff5a00;">
                                 手机号：
                             </div>
-                            <input class="pass-text-input" id="phone" style="color: #ff5a00;"/>
+                            <input class="pass-text-input" id="phone" type="tel" style="color: #ff5a00;"/>
                         </div>
                         <div class="item clearfix">
                             <div class="pass-radio left active" onclick="selectSex('男')">先生</div>
                             <div class="pass-radio right" onclick="selectSex('女')">女士</div>
                         </div>
                         <div class="item clearfix">
-                            <input type="button" class="pass-button" style="background-color: #ff5a00;" onclick="submit()" value="提交"/>
+                            <div class="pass-button" style="background-color: #ff5a00;" onclick="submit()">提交</div>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                             <div>稍后将有工作人员与您联系</div>
                         </div>
                         <div class="item clearfix">
-                            <input type="button" onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #ff5a00;" value="返回首页"/>
+                            <div onclick="window.location.href='/jzdc-services'" class="pass-button" style="background-color: #ff5a00;">返回首页</div>
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
   }
 
   var sex = '男';
-  var type = '3';
+  var type = '5';
   function selectSex(_sex) {
       sex = _sex;
       $(".pass-radio").each(function () {
