--- a/jzdc-services/index.html
+++ b/jzdc-services/index.html
@@ -6,6 +6,7 @@
     <title>集众服务</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css" />
     <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <script src="js/rem.js"></script>
 </head>
 <body>
 <div class="index-1-wrap">
@@ -13,29 +14,31 @@
         <i class="index-logo"></i>
         <i class="close" onclick="window.location.href='http://h5.jizhongdiancai.com'"></i>
     </div>
-    <div class="index-menu">
-        <div class="menu-row clearfix">
-            <div class="menu-item-left icon icon1">
-                <a href="finance.html"></a>
+    <div class="pass-form">
+        <div class="index-menu">
+            <div class="menu-row clearfix">
+                <div class="menu-item-left icon icon1">
+                    <a href="finance.html"></a>
+                </div>
+                <div class="menu-item-right icon icon2">
+                    <a href="law.html"></a>
+                </div>
             </div>
-            <div class="menu-item-right icon icon2">
-                <a href="law.html"></a>
+            <div class="menu-row clearfix">
+                <div class="menu-item-left icon icon3">
+                    <a href="insur.html"></a>
+                </div>
+                <div class="menu-item-right icon icon4">
+                    <a href="property.html"></a>
+                </div>
             </div>
-        </div>
-        <div class="menu-row clearfix">
-            <div class="menu-item-left icon icon3">
-                <a href="insur.html"></a>
-            </div>
-            <div class="menu-item-right icon icon4">
-                <a href="property.html"></a>
-            </div>
-        </div>
-        <div class="menu-row clearfix">
-            <div class="menu-item-left icon icon5">
-                <a href="as.html"></a>
-            </div>
-            <div class="menu-item-right icon icon6">
-                <a href="auto.html"></a>
+            <div class="menu-row clearfix">
+                <div class="menu-item-left icon icon5">
+                    <a href="as.html"></a>
+                </div>
+                <div class="menu-item-right icon icon6">
+                    <a href="auto.html"></a>
+                </div>
             </div>
         </div>
     </div>
