--- a/jzdc-services/insur.html
+++ b/jzdc-services/insur.html
@@ -23,47 +23,20 @@
                     <div class="insur-header">
                         <i class="back" onclick="prev()"></i>
                     </div>
-                    <div>
-                        <div class="insur-content">
-                            <p class="text">
-                                集众电采平台一直以来致力于家电行业的发展，始终关注中小家电企业的成长，采用集中采购的模式 联手国内知名一线保险品牌公司，提供一揽子保险服务。更低的价格，更全的保障范围，更高的赔付金额，守护着你和你的企业，你还等什么？
-                            </p>
-                        </div>
-                        <div>
-                            <img src="images/insur-1-slogan.png" width="100%" alt="">
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="insur-wrap">
+                <div class="insur-wrap" style="background-image: url('images/insur-2-bg.jpg')">
                     <div class="insur-header">
                         <i class="back" onclick="prev()"></i>
-                    </div>
-                    <div>
-                        <div class="insur-content">
-                            <p class="text" style="background-image: url('images/insur-2-border.png')">
-                                财产综合险、盗窃险、产品质量保证险、公众责任险、雇主责任险、现金险、机器损坏险、营业中断 险、团体意外伤害医疗险、物流责任险等。更多的 险种，更多的产品介绍，请查阅：
-                            </p>
-                        </div>
-                        <div class="animated slideInDown">
-                            <img src="images/insur-2-slogan.png" width="100%" alt="">
-                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="swiper-slide">
-                <div class="insur-wrap">
+                <div class="insur-wrap" style="background-image: url('images/insur-3-bg.jpg')">
                     <div class="insur-header">
                         <i class="back" onclick="prev()"></i>
-                    </div>
-                    <div>
-                        <div class="step3">
-                            <div class="content">
-                                <img src="images/insur-user.png" alt="" class="user">
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
